[project]
name = "ai-dungeon-master"
version = "1.0.0"
description = "AI Dungeon Master System — CMPSC441 Final Project"
requires-python = ">=3.11"

dependencies = []
# No external packages required for LLM calls.
# The Ollama client uses only Python's standard library (urllib, json).
# Install Ollama separately: https://ollama.com
# Then pull a model: ollama pull llama3

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "black>=24.0",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
